# MedicalAssistent

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: settings.py
docs/: PLAN.md  PREPROCESSING_GUIDE.md
examples/: extract_medical_report.py
image_analysis/: image_preprocessor.py
scripts/: process_dataset.py
src/: main.py  main_route.py
src/api/: __init__.py  routes.py  schemas.py
src/chroma_medical_db/: chroma.sqlite3
src/chunker/: service.py
src/configuration/: settings.py
src/extraction/: __init__.py  data_extractor.py  extractor.py  image_processor.py  pipeline.py  prompts.py  schemas.py  validator.py
src/generation/: __init__.py  context_builder.py  llm_client.py  prompts.py
src/medical_vectordb/: chroma.sqlite3
src/preprocessing/: config.py  preprocessor.py  presets.py
src/reporting/: __init__.py  pdf_converter.py  report_generator.py
src/reporting/templates/: report.html
src/repository/: medical_record_pipeline.py
src/repository/new_db/: new_repo_adapter.py  new_repo_interface.py  new_repo_service.py  site.db
src/repository/old_db/: old_db.py  old_repo_adapter.py  old_repo_interface.py  old_repo_service.py
src/vectorization/: embeddings.py  services.py  vectorstore.py
