[project]
name = "cp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "ollama>=0.6.0",
    "openai>=2.6.1",
    "opencv-python>=4.12.0.88",
    "openrouter>=1.0",
    "pillow>=12.0.0",
    "pydantic-settings>=2.11.0",
    "pytesseract>=0.3.13",
]
